tools/tests/ui/fail/l1008.cnf
// Test file for error code: L1008
// Expected error: Invalid Undefined character in division structure -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-invalid".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
